Maior abrangência nos testes da classe Categoria de Vendas